<resources>
    <string name="app_name">Evolet 2.0</string>
    <string name="entrar">Entrar</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="o">-------- O --------</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="crear">Crear</string>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="perfil">Perfil</string>
    <string name="logo">Logo</string>
    <string name="inicio">Inicio</string>
    <string name="ciclos">Ciclos</string>
    <string name="carreras">Carreras</string>
    <string name="tu">Tú</string>
    <string-array name="perfiles">
        <item>Entrenador</item>
        <item>Deportista</item>
    </string-array>
    <string-array name="tipoCarrera">
        <item>Trail</item>
        <item>Asfalto</item>
    </string-array>
    <string-array name="distanciaCarrera">
        <item>5K</item>
        <item>10K</item>
        <item>15K</item>
        <item>21K</item>
        <item>42K</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoy">Hoy</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="nuevas_carreras">Nuevas Carreras</string>
    <string name="mp">MP</string>
    <string name="agregar">Agregar</string>
    <string name="filtros">Filtros</string>
    <string name="lugar">Lugar</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="km">KM</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="fuerza">Fuerza</string>
    <string name="rodaje">Rodaje</string>
    <string name="datos_actividad">Datos Actividad</string>
    <string name="tiempo_total">Tiempo Total:</string>
    <string name="distancia_total">Distancia Total:</string>
    <string name="velocidad_media">Velocidad Media:</string>
    <string name="frecuencia_cardiaca">Frecuencia Cardiaca:</string>
    <string name="feedback">Feedback</string>
    <string name="calendario">Calendario</string>
    <string name="total_d_as">Total días:</string>
    <string name="total_distancia">Total distancia:</string>
    <string name="total_carreras">Total Carreras:</string>
    <string name="enviar">Enviar</string>
    <string name="total_distancia_entrenamientos">Total Distancia Entrenamientos:</string>
    <string name="total_distancia_carreras">Total Distancia Carreras:</string>
    <string name="total_entrenamientos">Total Entrenamientos:</string>
</resources>